Compress slider images

--- a/join/brite/html/shortcodes-hover-styles.html
+++ b/join/brite/html/shortcodes-hover-styles.html
@@ -768,7 +768,8 @@
                 <h5 class="text-white">Animations</h5>
                 <p class="text-light">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse et justo. Praesent mattis commodo augue.</p>
               </div>
-              <img src="http://via.placeholder.com/500x500" alt="" class="img-responsive"/> </div>
+              <img src="http://via.placeholder.com/500x500" alt="" class="img-responsive"/>
+            </div>
         </div>
         <!--end item-->
         
